--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "cards/poker",
     "description": "learning php project",
+    "license": "MIT",
     "require-dev": {        
         "pestphp/pest": "^1.22"
     },
@@ -12,7 +13,7 @@
     "require": {
         "php": ">=7.4",
         "composer-plugin-api": "^1.0|^2.0",
-        "mrsuh/php-parser": "94.15.2",
+        "mrsuh/php-parser": "^94.15.2",
         "symfony/console": "^4.0|^5.0|^6.0",
         "symfony/filesystem": "^4.0|^5.0|^6.0",
         "symfony/finder": "^4.0|^5.0|^6.0"
