--- a/.gitignore
+++ b/.gitignore
@@ -487,3 +487,23 @@ vendor/*
 /vendor/
 node_modules/*
 .env
+
+
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
