--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -2,7 +2,8 @@ name: PHP Composer
 
 on:
   push:
-    branches: [ "master", "testing" ]
+    branches:
+      - '**'
 
 permissions:
   contents: read
