--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -30,8 +30,4 @@ jobs:
     - name: Install dependencies
       run: composer install --prefer-dist --no-progress
 
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    - name: Run test suite
-      run: ./vendor/bin/pest
+    # Tests now run on laravel.yml
