--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -26,8 +26,8 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
-    - name: Execute tests (Unit and Feature tests) via PHPPest
+    - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
         DB_DATABASE: database/database.sqlite
-      run: ./vendor/bin/pest
+      run: vendor/bin/phpunit
