--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dependencies": {
         "bootstrap": "^5.2.2",
         "jquery": "^3.6.1",
+        "laravel-mix": "^6.0.49",
         "lite-server": "^2.5.4"
     },
     "devDependencies": {
