--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         "laravelcollective/html": "^6.3",
         "symfony/console": "^4.0|^5.0|^6.0",
         "symfony/filesystem": "^4.0|^5.0|^6.0",
-        "symfony/finder": "^4.0|^5.0|^6.0",
-        "ext-http": "*"
+        "symfony/finder": "^4.0|^5.0|^6.0"
     },
 
     "autoload": {
