--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
+        "laravel/ui": "^4.1",
         "laravelcollective/html": "^6.3",
         "symfony/console": "^4.0|^5.0|^6.0",
         "symfony/filesystem": "^4.0|^5.0|^6.0",
